:icons: font

= Gentics Mesh Changelog

== 0.9.9 (PENDING)

icon:plus[] Performance: The startup performance has been increased when dealing with huge datasets.

icon:plus[] Auth: The anonymous authentication mechanism can now also be disabled by setting the `Anonymous-Authentication: disable` header. This is useful for client applications which don't need or want anonymous authentication. The Gentics Mesh REST client has been enhanced accordingly.

icon:check[] UI: You will no longer be automatically logged in as anonymous user once your session expires.

icon:plus[] Core: The read performance of node lists has been improved.

icon:plus[] Core: The write performance of nodes has been improved.

icon:plus[] Demo: The demo data have been updated. The a folderName and fileName field has been added to the demo schemas.

icon:plus[] GraphQL: Added micronode list handling. Previously it was not possible to handle micronode list fields.

icon:check[] Core: The language fallback handling for node breadcrumbs has been fixed. Previously the default language was not automatically added to the handled languages.

== 0.9.8 (08.05.2017)

icon:plus[] UI: Microschemas can now be assigned to projects.

icon:plus[] UI: Descriptions can now be assigned to schemas & microschemas.

icon:plus[] Core: A bug was fixed which prevented the node response `project` property to be populated.

icon:plus[] Core: The redundant `isContainer` field was removed from the node response.

icon:plus[] Core: Various bugs for node migrations have been fixed.

icon:plus[] Core: The allow property for micronode schema fields will now correctly be handled.

icon:plus[] Core: Microschemas will now be assigned to projects during a schema update. This only applies for microschemas which are referenced by the schema (e.g.: via a micronode field).

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.19.

== 0.9.7 (28.04.2017)
